--- a/icefrdgeSup/loop.template
+++ b/icefrdgeSup/loop.template
@@ -98,3 +98,14 @@ record(ao, "$(P)SIM:VTI:LOOP$(LOOP_NUM):TSET:SP") {
 
 alias("$(P)SIM:VTI:LOOP$(LOOP_NUM):TSET:SP", "$(P)SIM:VTI:LOOP$(LOOP_NUM):TSET")
 
+record(ao, "$(P)SIM:VTI:LOOP$(LOOP_NUM):P:SP") {
+	
+}
+
+alias("$(P)SIM:VTI:LOOP$(LOOP_NUM):P:SP", "$(P)SIM:VTI:LOOP$(LOOP_NUM):P")
+
+record(ao, "$(P)SIM:VTI:LOOP$(LOOP_NUM):I:SP") {
+	
+}
+
+alias("$(P)SIM:VTI:LOOP$(LOOP_NUM):I:SP", "$(P)SIM:VTI:LOOP$(LOOP_NUM):I")
