made PIDs to be unitless

--- a/icefrdgeSup/loop.template
+++ b/icefrdgeSup/loop.template
@@ -33,7 +33,7 @@ record(ao, "$(P)VTI:LOOP$(LOOP_NUM):P:SP")
 	field(DESC, "Loop $(LOOP_NUM) proportional setpoint")
 	field(DTYP, "stream")
     field(OUT, "@icefrdge.proto setLoopProportional($(LOOP_NUM)) $(PORT)")
-	field(EGU, "K")
+	field(EGU, "")
 
 	field(SIML, "$(P)SIM")
     field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):P:SP")
@@ -48,7 +48,7 @@ record(ai, "$(P)VTI:LOOP$(LOOP_NUM):P")
 	field(DTYP, "stream")
     field(INP, "@icefrdge.proto getLoopProportional($(LOOP_NUM)) $(PORT)")
     field(SCAN, "1 second")
-	field(EGU, "K")
+	field(EGU, "")
 
 	field(SIML, "$(P)SIM")
     field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):P")
@@ -63,7 +63,7 @@ record(ao, "$(P)VTI:LOOP$(LOOP_NUM):I:SP")
 	field(DESC, "Loop $(LOOP_NUM) integral setpoint")
 	field(DTYP, "stream")
     field(OUT, "@icefrdge.proto setLoopIntegral($(LOOP_NUM)) $(PORT)")
-	field(EGU, "K")
+	field(EGU, "")
 
 	field(SIML, "$(P)SIM")
     field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):I:SP")
@@ -78,7 +78,7 @@ record(ai, "$(P)VTI:LOOP$(LOOP_NUM):I")
 	field(DTYP, "stream")
     field(INP, "@icefrdge.proto getLoopIntegral($(LOOP_NUM)) $(PORT)")
     field(SCAN, "1 second")
-	field(EGU, "K")
+	field(EGU, "")
 
 	field(SIML, "$(P)SIM")
     field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):I")
@@ -93,7 +93,7 @@ record(ao, "$(P)VTI:LOOP$(LOOP_NUM):D:SP")
 	field(DESC, "Loop $(LOOP_NUM) derivative setpoint")
 	field(DTYP, "stream")
     field(OUT, "@icefrdge.proto setLoopDerivative($(LOOP_NUM)) $(PORT)")
-	field(EGU, "K")
+	field(EGU, "")
 
 	field(SIML, "$(P)SIM")
     field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):D:SP")
@@ -108,7 +108,7 @@ record(ai, "$(P)VTI:LOOP$(LOOP_NUM):D")
 	field(DTYP, "stream")
     field(INP, "@icefrdge.proto getLoopDerivative($(LOOP_NUM)) $(PORT)")
     field(SCAN, "1 second")
-	field(EGU, "K")
+	field(EGU, "")
 
 	field(SIML, "$(P)SIM")
     field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):D")
