--- a/icefrdgeSup/loop.template
+++ b/icefrdgeSup/loop.template
@@ -114,8 +114,38 @@ record(ai, "$(P)VTI:LOOP$(LOOP_NUM):D")
     field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):D")
     field(SDIS, "$(P)DISABLE")
 	
-	info(archive, "VAL")
 	info(INTEREST, "HIGH")
+	info(archive, "VAL")
+}
+
+record(ao, "$(P)VTI:LOOP$(LOOP_NUM):RAMP_RATE:SP")
+{
+	field(DESC, "Loop $(LOOP_NUM) ramp rate setpoint")
+	field(DTYP, "stream")
+    field(OUT, "@icefrdge.proto setLoopRampRate($(LOOP_NUM)) $(PORT)")
+	field(EGU, "K/min")
+
+	field(SIML, "$(P)SIM")
+    field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):RAMP_RATE:SP")
+    field(SDIS, "$(P)DISABLE")
+	
+	info(archive, "VAL")
+}
+
+record(ai, "$(P)VTI:LOOP$(LOOP_NUM):RAMP_RATE")
+{
+	field(DESC, "Loop $(LOOP_NUM) ramp rate")
+	field(DTYP, "stream")
+    field(INP, "@icefrdge.proto getLoopRampRate($(LOOP_NUM)) $(PORT)")
+    field(SCAN, "1 second")
+	field(EGU, "K/min")
+
+	field(SIML, "$(P)SIM")
+    field(SIOL, "$(P)SIM:VTI:LOOP$(LOOP_NUM):RAMP_RATE")
+    field(SDIS, "$(P)DISABLE")
+	
+	info(INTEREST, "HIGH")
+	info(archive, "VAL")
 }
 
 #
