refactored valve pvs so they are defined in a template

--- a/icefrdgeSup/Makefile
+++ b/icefrdgeSup/Makefile
@@ -5,6 +5,7 @@ include $(TOP)/configure/CONFIG
 # Install .dbd and .db files
 DB += icefrdge.db
 DB += loop.db
+DB += valve.db
 DATA += icefrdge.proto
 
 
