added raw pvs to protocol and error setter to substitutions

--- a/icefrdgeSup/Makefile
+++ b/icefrdgeSup/Makefile
@@ -8,6 +8,7 @@ DB += loop.db
 DB += valve.db
 DB += proportional_valve.db
 DB += solenoid_valve.db
+DB += icefrdge_error_setter.db
 DATA += icefrdge.proto
 
 
