--- a/icefrdgeSup/valve_template.template
+++ b/icefrdgeSup/valve_template.template
@@ -21,6 +21,10 @@ record(bo, "$(P)MIMIC:V$(VALVE_NUM):SP")
 	field(DTYP, "stream")
 	field(OUT, "@icefrdge.proto setMimicValve($(VALVE_NUM)) $(PORT)")
 
+	# Scan of readback is not frequent, so we process the readback after we set 
+	# the setpoint to update it instantly
+	field(FLNK, "$(P)MIMIC:V1")
+
 	field("ZNAM", "CLOSED")
 	field("ONAM", "OPEN")
 
