fixed ZNAM and ONAM fields, added SDIS field where it wasnt

--- a/icefrdgeSup/solenoid_valve_template.template
+++ b/icefrdgeSup/solenoid_valve_template.template
@@ -1,9 +1,10 @@
 record(bi, "$(P)MIMIC:SV$(VALVE_NUM)")
 {
 	field(DESC, "Solenoid valve $(VALVE_NUM) status")
+	field(SDIS, "$(P)DISABLE")
 
-	field("ZNAM", "CLOSED")
-	field("ONAM", "OPEN")
+	field(ZNAM, "CLOSED")
+	field(ONAM, "OPEN")
 
 	info(INTEREST, "HIGH")
 	info(archive, "VAL")
@@ -14,13 +15,14 @@ record(bo, "$(P)MIMIC:SV$(VALVE_NUM):SP")
 	field(DESC, "Solenoid valve $(VALVE_NUM) setpoint")
 	field(DTYP, "stream")
 	field(OUT, "@icefrdge.proto setSolenoidValve($(VALVE_NUM)) $(PORT)")
+	field(SDIS, "$(P)DISABLE")
 
 	# Scan of readback is not frequent, so we process the readback after we set 
 	# the setpoint to update it instantly
 	field(FLNK, "$(P)MIMIC:V1")
 
-	field("ZNAM", "CLOSED")
-	field("ONAM", "OPEN")
+	field(ZNAM, "CLOSED")
+	field(ONAM, "OPEN")
 
 	info(INTEREST, "HIGH")
 	info(archive, "VAL")
