--- a/icefrdgeSup/valve_template.template
+++ b/icefrdgeSup/valve_template.template
@@ -7,9 +7,10 @@ record(bi, "$(P)MIMIC:V$(VALVE_NUM)")
 	$(IF_ONE) field(DTYP, "stream")
 	$(IF_ONE) field(INP, "@icefrdge.proto getMimicValves($(P)) $(PORT)")
 	$(IF_ONE) field(SCAN, "5 second")
+	field(SDIS, "$(P)DISABLE")
 
-	field("ZNAM", "CLOSED")
-	field("ONAM", "OPEN")
+	field(ZNAM, "CLOSED")
+	field(ONAM, "OPEN")
 
 	info(INTEREST, "HIGH")
 	info(archive, "VAL")
@@ -20,13 +21,14 @@ record(bo, "$(P)MIMIC:V$(VALVE_NUM):SP")
 	field(DESC, "Mimic valve $(VALVE_NUM) setpoint")
 	field(DTYP, "stream")
 	field(OUT, "@icefrdge.proto setMimicValve($(VALVE_NUM)) $(PORT)")
+	field(SDIS, "$(P)DISABLE")
 
 	# Scan of readback is not frequent, so we process the readback after we set 
 	# the setpoint to update it instantly
 	field(FLNK, "$(P)MIMIC:V1")
 
-	field("ZNAM", "CLOSED")
-	field("ONAM", "OPEN")
+	field(ZNAM, "CLOSED")
+	field(ONAM, "OPEN")
 
 	info(INTEREST, "HIGH")
 	info(archive, "VAL")
