--- a/icefrdgeSup/proportional_valve_template.template
+++ b/icefrdgeSup/proportional_valve_template.template
@@ -1,7 +1,7 @@
 record(ai, "$(P)PROPORTIONAL_VALVE$(VALVE_NUM)")
 {
 	field(DESC, "Proportional valve $(VALVE_NUM)")
-	field(EGU, "")
+	field(EGU, "%")
 	field(PREC, "1")
 
 	# The mimic valve pvs are updated using record redirection, so only one of the 10 PVs need a SCAN, INP and DTYP field.
@@ -21,7 +21,7 @@ record(ao, "$(P)PROPORTIONAL_VALVE$(VALVE_NUM):SP")
 	field(DESC, "Proportional valve $(VALVE_NUM) setpoint")
 	field(DTYP, "stream")
 	field(OUT, "@icefrdge.proto setProportionalValve($(VALVE_NUM)) $(PORT)")
-	field(EGU, "")
+	field(EGU, "%")
 	field(PREC, "1")
 
 	field(DRVL, "0")
