--- a/icefrdgeSup/valve_template.template
+++ b/icefrdgeSup/valve_template.template
@@ -7,7 +7,7 @@ record(bi, "$(P)VALVE$(VALVE_NUM)")
 	$(IF_ONE) field(DTYP, "stream")
 	$(IF_ONE) field(INP, "@icefrdge.proto getValves($(P)) $(PORT)")
 	$(IF_ONE) field(SCAN, "5 second")
-	field(SDIS, "$(P)DISABLE")
+	$(IF_ONE) field(SDIS, "$(P)DISABLE")
 
 	field(ZNAM, "CLOSED")
 	field(ONAM, "OPEN")
